gobmkida/g3/get_command
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_command/src/interface/play_ascii.c:875:19: error: use of undeclared identifier 'unk_4BC167'
if ( memcmp( v1, &unk_4BC167, 7uLL) ) 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/get_command/src/obj/2/play_ascii.o] Error 1
